--- a/src/app/ads/ads.component.html
+++ b/src/app/ads/ads.component.html
@@ -1,3 +1,8 @@
 <mat-card>
-  <app-ad-list></app-ad-list>
+  <mat-card-title>
+    <app-nav-bar></app-nav-bar>
+  </mat-card-title>
+  <mat-card-content>
+    <app-ad-list></app-ad-list>
+  </mat-card-content>
 </mat-card>
