--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,4 @@
 <div class="main-app-wrapper">
-  <mat-toolbar>Welcome, to ads-board angular SPA</mat-toolbar>
-  <mat-card>
-    <mat-card-title>
-      <app-nav-bar></app-nav-bar>
-    </mat-card-title>
-    <mat-card-content>
-      <app-ads></app-ads>
-    </mat-card-content>
-  </mat-card>
+  <mat-toolbar><h1>Welcome, to ads-board angular SPA</h1></mat-toolbar>
+  <router-outlet></router-outlet>
 </div>
