ad route verification added

--- a/src/app/ads/ad-edit/ad-edit.component.html
+++ b/src/app/ads/ad-edit/ad-edit.component.html
@@ -1,4 +1,7 @@
 <mat-card>
+  <mat-card-title>
+    <h1>{{pageTitle}}</h1>
+  </mat-card-title>
   <form (submit)="editAdMode ? updateAd() : createAd()" [formGroup]="AdForm" class="flex-wrapper">
     <mat-form-field>
       <label>
